syntax = "proto3";

package cheers.order.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/gen/go/cheers/order/v1;order";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }

  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{order_id}"
    };
  }

  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse) {
    option (google.api.http) = {
      patch: "/v1/orders"
      body: "*"
    };
  }

  rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse) {
    option (google.api.http) = {
      delete: "/v1/orders/{order_id}"
    };
  }

  rpc ListOrder (ListOrderRequest) returns (ListOrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/list"
    };
  }

}

message Order {
  string id = 1;
  string status = 2;
  int32 amount = 3;
  string customer_id = 4;
  string order_id = 5;
  string user_id = 6;
  google.protobuf.Timestamp create_time = 7;
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderRequest {
  Order order = 1;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string order_id = 1;
}

message DeleteOrderResponse {
}

message ListOrderRequest {
  oneof filter {
    string party_id = 1;
    string user_id = 2;
  }
}

message ListOrderResponse {
  repeated Order orders = 1;
}